- pauseMapServer (seconds)
  Pause for (seconds) before connect to map server (Sometime server slower than bots).
- autoBreakTime now supports the 'all' time, which makes it take a break
  every day in the week.
- statsAddAuto_dontUseBonus (flag)
  If set to 1 then statsAddAuto will not factor in the stat bonuses at all.

New timeouts.txt options:
- ai_teleport 1
  Specifies the timeout for using Fly Wing when teleporting. This prevents Kore
  from using tons of Fly Wings when trying to teleport.

New commands:
- ihist
  Display last few entries of the item log.
- move [Portal Number]
  To move into portal if portals exist.

Internal:
- $interface->beep() function for cross-platform beep support.
- OpenKore will exit if a plugin failed to load.
- OpenKore will exit if a configuration file failed to load.
- checkMonsterCondition() now takes a monster hash instead of monster ID.
  (Perhaps other similar functions should be converted too)
- inInventory($item, $quantity = 1) returns the index of the item if you have
  at least $quantity of it, or undef otherwise.
- inventoryItemRemoved($index, $amount) function (packet 00AF is not the only
  way inventory items can be removed).
- New module Match.pm contains functions for matching input typed by the
  player with an in-game entity (e.g. players, monsters, items).
- Better support for advanced 2-2 classes.
- Guild member job ID format is now the same as char job ID format.
- IPC protocol's numbers are now in big endian format.
- is_casting plugin hook.
- $monsters{$ID}{ID} is now set to $ID, so that %monsters objects contain
  complete information about themselves.
- New ai_skillUse2() function is a wrapper to ai_skillUse() that (1)
  uses "objects" instead of identifiers, and (2) automatically resolves
  (x,y) coordinates for area-targetted skills.
- Move some messages from "route" to "route_teleport" domain.
- Comment out stopAttack() to try to fix "bot attacks slowly when buff
  ran out" bug.